--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -20,13 +20,13 @@ jobs:
       - name: Download snapshot artefact
         uses: actions/download-artifact@v4
         with:
-          name: snapshot-files
-          path: ./artifact
+          name: snapshot
+          path: .
 
       - name: Prepare content
         run: |
-          rm -f *.md *.html
-          mv artifact/snapshot.html index.html
+          rm -f *.md index.html
+          mv snapshot.html index.html
           mkdir content
           cp index.html content/
 
